fix spacing

--- a/docroot/themes/custom/mass_theme/overrides/css/view-data-listing.css
+++ b/docroot/themes/custom/mass_theme/overrides/css/view-data-listing.css
@@ -29,7 +29,6 @@
   background-color: #e8eef4;
   border: 1px solid #8aaac7;
   width: 100%;
-  margin-bottom: 1.2rem;
   justify-content: space-between;
   padding: .25rem 1rem;
 }
@@ -76,6 +75,11 @@
   #filters--desktop {
     display: block;
   }
+}
+
+.data-listing-wrapper .main-content--reversed .sidebar {
+  margin-top: 0;
+  padding-bottom: 20px;
 }
 
 .data-listing-wrapper .ma__general-teaser {
